# OpenShadingLanguage

./: CHANGES.md  CMakeLists.txt  INSTALL.md  Makefile
.github/workflows/: build-steps.yml  ci.yml  docs.yml
src/build-scripts/: asan-blacklist.txt  build_libtiff.bash  build_llvm.bash  build_opencolorio.bash  build_openimageio.bash  build_pugixml.bash  build_pybind11.bash  ci-build.bash  ci-startup.bash  gh-installdeps.bash  gh-win-installdeps.bash  install_homebrew_deps.bash
src/cmake/: compiler.cmake  cuda_macros.cmake  externalpackages.cmake  fancy_add_executable.cmake  flexbison.cmake  llvm_macros.cmake  pythonutils.cmake  testing.cmake
src/doc/: CMakeLists.txt  index.rst  osltoy.md
src/include/: osl_pvt.h
src/include/OSL/: device_string.h  dual_vec.h  llvm_util.h  oslconfig.h.in  oslexec.h  oslquery.h  rendererservices.h  rs_free_function.h  strdecls.h
src/liboslcomp/: CMakeLists.txt  codegen.cpp  oslcomp.cpp  oslgram.y  osllex.l  symtab.cpp  typecheck.cpp
src/liboslexec/: CMakeLists.txt  backendcpp.cpp  backendcpp.h  backendllvm.cpp  backendllvm.h  batched_backendllvm.cpp  batched_backendllvm.h  batched_llvm_gen.cpp  batched_llvm_instance.cpp  builtindecl.h  constfold.cpp  context.cpp  llvm_gen.cpp  llvm_instance.cpp  llvm_ops.cpp  llvm_passes.h  llvm_util.cpp  opclosure.cpp  opcolor.cpp  opmatrix.cpp  optexture.cpp  oslexec_pvt.h  osogram.y  osolex.l  rendservices.cpp  rs_fallback.cpp  runtimeoptimize.cpp  runtimeoptimize.h  shadingsys.cpp  simplexnoise.cpp  string_hash.h
src/liboslnoise/: CMakeLists.txt
src/liboslquery/: CMakeLists.txt  py_osl.cpp  py_osl.h
src/oslc/: CMakeLists.txt
src/oslinfo/: CMakeLists.txt
src/osltoy/: CMakeLists.txt  rs_strdecls.h
src/shaders/: vector2.h
src/testrender/: CMakeLists.txt  bvh.cpp  optix_stringtable.cpp  optixraytracer.cpp  optixraytracer.h
src/testrender/cuda/: optix_raytracer.cu
src/testshade/: CMakeLists.txt  optixgridrender.cpp  optixgridrender.h  rs_simplerend.cpp  simplerend.cpp  testshade.cpp
src/testshade/cuda/: optix_grid_renderer.cu
testsuite/example-cuda/: CMakeLists.txt  rend_lib.cu
testsuite/example-globalplacement/: osldeformer.cpp
testsuite/render-mx-dielectric-glass/: run.py
testsuite/texture-colorspace/: test.osl
testsuite/texture-colorspace/ref/: out.txt
